<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/banner" />

        <ImageView
            android:layout_width="@dimen/info_vespa_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/vespa_girl" />

        <TextView
            android:id="@+id/tv_barcamp_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/barcamp_url"
            android:textColor="#D98C98"
            android:textSize="20sp"
            android:typeface="serif" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:paddingLeft="10dp"
            android:layout_marginTop="@dimen/info_divider_height"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/contact_text"
                android:textColor="#BA2A41" 
                android:minWidth="@dimen/about_label_min_width">
            </TextView>

            <TextView
                android:id="@+id/tv_contact_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#FAF1F3"
                android:gravity="center_vertical"
                android:text="@string/contact_email"
                android:padding="@dimen/about_text_padding"
                android:textColor="@drawable/email_text_selector"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/bug_text"
                android:textColor="#BA2A41" 
                android:minWidth="@dimen/about_label_min_width">
            </TextView>

            <TextView
                android:id="@+id/tv_bug_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="#FAF1F3"
                android:gravity="center_vertical"
                android:text="@string/bug_email"
                android:padding="@dimen/about_text_padding"
                android:textColor="@drawable/email_text_selector"
                android:textStyle="bold"
                 />
        </LinearLayout>
        <ImageView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:scaleType="fitEnd"
            android:adjustViewBounds="true"
            android:src="@drawable/barcamp_footer"
            />
    </LinearLayout>

</ScrollView>